--- a/nodes/subscribers/klicktipp-subscriber-subscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-subscribe.html
@@ -7,6 +7,12 @@
 		<label for="node-input-klicktipp"><i class="fa fa-cog"></i> <span>KlickTipp Config</span></label>
 		<input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
+	<div class="form-row" style="margin: 12px 0;">
+		<p style="color: #555; background-color: #e6f7ff; padding: 5px 10px; border-left: 3px solid #2196F3; margin: 0;">
+				<i class="fa fa-info-circle" style="margin-right: 5px;"></i>
+				If a contact with the same email address or SMS number already exists, it will be updated.
+		</p>
+</div>
 	<div class="form-row">
 		<label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
 		<input type="text" id="node-input-email" placeholder="Enter email address">
