--- a/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/subscription-processes/klicktipp-subscription-process-get-redirect.html
@@ -157,18 +157,15 @@
 			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
 		},
 		oneditsave: function () {
-			const manualEnabled = $('#node-input-toggleFieldType').is(':checked');
-			this.manualFieldEnabled = manualEnabled;
-			if (manualEnabled) {
-				const manualVal = $('#node-input-listIdManual').val();
-				this.manualListId = manualVal;
-				// Store the manual value in listId so that runtime picks it up.
-				this.listId = manualVal;
-			} else {
-				const selectVal = $('#node-input-listId').val();
-				this.listId = Number(selectVal);
-				this.manualListId = '';
-			}
-		},
+			ktSaveDualInput(
+				$('#node-input-listId'),
+				$('#node-input-listIdManual'),
+				$('#node-input-toggleFieldType'),
+				this,
+				'listId',
+				'manualListId',
+				'manualFieldEnabled',
+			);
+		}
 	});
 </script>
